--- a/index.html
+++ b/index.html
@@ -57,17 +57,46 @@
                     <h4 class="card-title">{{ p.title }}</h4>
                     <p class="card-text">{{ p.description }}</p>
                     <p class="nav-link" style="text-align: right">Publicado el 15 de febrero</p>
-                    <a href="#" class="stretched-link"></a>
+                    <a href="#" clas
+<svg xmlns="http://www.w3.org/2000/svg" width="715" height="893" viewBox="0 0 715 893" fill="none">
+<circle cx="580" cy="115" r="135" fill="#00a8f3"/>
+<circle cx="159.078" cy="733.078" r="158.5" transform="rotate(89.7906 159.078 733.078)" fill="#00a8f3"/>
+<circle cx="323.224" cy="721.854" r="46.7158" transform="rotate(89.7906 323.224 721.854)" fill="#00a8f3"/>
+<mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="0" y="574" width="319" height="319">
+<circle cx="159.078" cy="733.27" r="158.5" transform="rotate(89.7906 159.078 733.27)" fill="#1ED760"/>
+</mask>
+<g mask="url(#mask0)">
+<circle cx="323.224" cy="721.854" r="46.7158" transform="rotate(89.7906 323.224 721.854)" fill="#2D46B9"/>
+</g>
+<circle cx="562.5" cy="632.5" r="57.5" fill="#00a8f3"/>
+</svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="1274" height="1221" viewBox="0 0 1274 1221" fill="none">
+<circle cx="1079.5" cy="194.5" r="194.5" fill="#00a8f3"/>
+<circle cx="229.384" cy="990.384" r="228.55" transform="rotate(89.7906 229.384 990.384)" fill="#00a8f3"/>
+<circle cx="466.076" cy="974.199" r="67.3622" transform="rotate(89.7906 466.076 974.199)" fill="#00a8f3"/>
+<mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="0" y="761" width="459" height="460">
+<circle cx="229.384" cy="990.66" r="228.55" transform="rotate(89.7906 229.384 990.66)" fill="#1ED760"/>
+</mask>
+<g mask="url(#mask0)">
+<circle cx="466.076" cy="974.199" r="67.3622" transform="rotate(89.7906 466.076 974.199)" fill="#2D46B9"/>
+</g>
+<circle cx="1070" cy="903" r="83" fill="#00a8f3"/>
+</svg>
+
+
+
+
+
+
+s="stretched-link"></a>
                 </div>
             </div>
     </div>
     </div>
     <div class="end">
-        {% block end_content %}
             <div class="end_section">
             Contacto: contact@zage.cl<br><br>
             by Phoenix LATAM
             </div>
-        {% endblock %}
     </div>
 </body>
