--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/javascript.util/0.12.12/javascript.util.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" type="image/png" href="{% static 'img/android-icon-48x48.png' %}"/>
+    <link rel="shortcut icon" type="image/png" href='img/android-icon-48x48.png'/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dropdown/2.0.3/jquery.dropdown.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand fixed-top">
-        <a href="{% url 'index' %}"><img class="navbar-brand" src="{% static 'img/logo4.png' %}" alt="jobnow" width="100px"></a>
+        <a href="{% url 'index' %}"><img class="navbar-brand" src='img/logo4.png' alt="jobnow" width="100px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -83,12 +83,6 @@
 <circle cx="1070" cy="903" r="83" fill="#00a8f3"/>
 </svg>
 
-
-
-
-
-
-s="stretched-link"></a>
                 </div>
             </div>
     </div>
