--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <!-- END Navbar -->
     <section class="bursts-hero">
     <div class="principal">
-        Encuentra <br> tu futuro
+        Reducimos la generación de basura electrónica <br> 
+        dándole un segundo uso creativo, entretenido y amigable
     </div></section>
     <div class="content">
         
