--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <div class="child">
                 <div class="card">
                         <div class="company_logo">
-                            <img class="logo" src="{{ MEDIA_URL }}{{ p.logo }}">
+                            <img class="logo" src="img/android-icon-48x48.png">
                         </div>
-                    <h4 class="card-title">{{ p.title }}</h4>
-                    <p class="card-text">{{ p.description }}</p>
+                    <h4 class="card-title">ARCADE NINTENDO X64</h4>
+                    <p class="card-text" style=" color: green; ">$ 100.000</p>
                     <p class="nav-link" style="text-align: right">Publicado el 15 de febrero</p>
                 </div>
             </div>
