--- a/index.html
+++ b/index.html
@@ -36,10 +36,22 @@
             <div class="child">
                 <div class="card">
                         <div class="company_logo">
-                            <img class="logo" src="img/android-icon-48x48.png">
+                            <img class="logo" src="img/616595_10151114888106650_428847143_o (1).jpg">
                         </div>
-                    <h4 class="card-title">ARCADE NINTENDO X64</h4>
-                    <p class="card-text" style=" color: green; ">$ 100.000</p>
+                    <h4 class="card-title">Escultura darth vader</h4>
+                    <p class="card-text" style=" color: green; ">$ 50.000</p>
+                    <p class="nav-link" style="text-align: right">Publicado el 15 de febrero</p>
+                </div>
+            </div>
+    </div>
+    <div class="parent">
+            <div class="child">
+                <div class="card">
+                        <div class="company_logo">
+                            <img class="logo" src="img/616595_10151114888106650_428847143_o (1).jpg">
+                        </div>
+                    <h4 class="card-title">Escultura darth vader</h4>
+                    <p class="card-text" style=" color: green; ">$ 50.000</p>
                     <p class="nav-link" style="text-align: right">Publicado el 15 de febrero</p>
                 </div>
             </div>
