--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <div class="child">
                 <div class="card">
                         <div class="company_logo">
-                            <img class="logo" src="img/616595_10151114888106650_428847143_o (1).jpg">
+                            <img class="logo" src="img/e99122238c741b63e4f81f48d2a202a4.jpg">
                         </div>
-                    <h4 class="card-title">Escultura darth vader</h4>
+                    <h4 class="card-title">Perro electrico</h4>
                     <p class="card-text" style=" color: green; ">$ 50.000</p>
                     <p class="nav-link" style="text-align: right">Publicado el 15 de febrero</p>
                 </div>
