--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand fixed-top">
-        <a href="{% url 'index' %}"><img class="navbar-brand" src='img/logo4.png' alt="jobnow" width="100px"></a>
+        <a href="#"><img class="navbar-brand" src='img/logo4.png' alt="jobnow" width="100px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
