--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div class="company_logo">
                             <img class="logo" src="img/WhatsApp Image 2021-04-28 at 11.31.31 (1).png">
                         </div>
-                    <h4 class="card-title">Perro electrico</h4>
+                    <h4 class="card-title">Consolas retro </h4>
                     <p class="card-text" style=" color: green; ">$ 50.000</p>
                     <p class="nav-link" style="text-align: right">Publicado el 15 de febrero</p>
                 </div>
