--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
           <input type="search" class="form-control rounded" placeholder="Busca una oferta"/>
           <button type="button" class="btn btn-outline-primary"><i class="fa fa-search"></i></button>
         </div>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-4">
+
         <li class="nav-item">
-            <button type="button" class="btn btn-outline-primary"><a class="nav-link" href="#">Donar</a></li></button>
-                        
+            <button type="button" class="btn btn-outline-primary"><a href="#">Donar</a></li></button>
+             </ul>
+        </div>
     </nav>
     <!-- END Navbar -->
     <section class="bursts-hero">
