--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul class="navbar-nav me-4">
 
         <li class="nav-item">
-            <button type="button" class="btn btn-outline-primary"><a href="#">Donar</a></li></button>
+            <button type="button" class="btn btn-outline-primary"><a class="donate" href="#">Donar</a></li></button>
              </ul>
         </div>
     </nav>
