--- a/index.html
+++ b/index.html
@@ -13,69 +13,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dropdown/2.0.3/jquery.dropdown.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand fixed-top">
-        <a href="#"><img class="navbar-brand" src='img/logo4.png' alt="jobnow" width="100px"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="input-group">
-          <input type="search" class="form-control rounded" placeholder="Busca una oferta"/>
-          <button type="button" class="btn btn-outline-primary"><i class="fa fa-search"></i></button>
-        </div>
-         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-4">
-
-        <li class="nav-item">
-            <button type="button" class="btn btn-outline-primary"><a class="donate" href="#">Donar</a></li></button>
-             </ul>
-        </div>
-    </nav>
-    <!-- END Navbar -->
-    <section class="bursts-hero">
-    <div class="principal">
-        Reducimos la generación de basura electrónica <br> 
-        dándole un segundo uso creativo, entretenido y amigable
-    </div></section>
-    <div class="content">
-        
-    <div class="parent">
-            <div class="child">
-                <div class="card">
-                        <div class="company_logo">
-                            <img class="logo" src="img/616595_10151114888106650_428847143_o (1).jpg">
-                        </div>
-                    <h4 class="card-title">Escultura darth vader</h4>
-                    <p class="card-text" style=" color: green; ">$ 50.000</p>
-                    <p class="nav-link" style="text-align: right">Publicado el 15 de febrero</p>
-                </div>
-            </div>
-            <div class="child">
-                <div class="card">
-                        <div class="company_logo">
-                            <img class="logo" src="img/e99122238c741b63e4f81f48d2a202a4.jpg">
-                        </div>
-                    <h4 class="card-title">Perro electrico</h4>
-                    <p class="card-text" style=" color: green; ">$ 50.000</p>
-                    <p class="nav-link" style="text-align: right">Publicado el 15 de febrero</p>
-                </div>
-            </div>
-            <div class="child">
-                <div class="card">
-                        <div class="company_logo">
-                            <img class="logo" src="img/WhatsApp Image 2021-04-28 at 11.31.31 (1).png">
-                        </div>
-                    <h4 class="card-title">Consolas retro </h4>
-                    <p class="card-text" style=" color: green; ">$ 50.000</p>
-                    <p class="nav-link" style="text-align: right">Publicado el 15 de febrero</p>
-                </div>
-            </div>
-    </div>
- 
-    </div>
-    <div class="end">
-            <div class="end_section">
-            Contacto: contact@zage.cl<br><br>
-            by Phoenix LATAM
-            </div>
-    </div>
+<svg>
+    <circle cx="70" cy="70" r="1" id="c1"></circle>
+    <circle cx="70" cy="70" r="1" id="c2"></circle>
+    <circle cx="70" cy="70" r="1" id="c3"></circle>
+</svg>
 </body>
