--- a/fintual/index.html
+++ b/fintual/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 <h2 class="navbar">Algunas cosas choras</h2>
+<h6 class="navbar font-italic text-info">Made by Nicolás Zen (Nicolás Zenteno Guardia)</h6>
 <h5 class="navbar font-italic text-secondary">Si ponen un horizonte muy grande de tiempo va a demorar mucho (Se ejecuta 1 solo thread)</h5>
 <div class="d-flex flex-row">
     <div class="card-body align-content-center">
